--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="subheading mb-5">Guarabira-PB, BRAZIL · (83) 9 9855-8560 ·
           <a href="mailto:name@email.com">emanuel.gfsdeveloper@gmail.com</a>
         </div>
-        <p class="lead mb-5" align="justify">Atualmente sou estudante do Curso Técnico em Informática Integrado ao Ensino Médio do Instituto Federal da Paraíba Campus Guarabira. Sou instrutor dos Cursos Lógica de Programação e de Programação pelo Projeto Olimpíco de Informática da Universidade Federal da Paraíba. Organizador da Olimpíada Regional de Informática. Pesquisador do Grupo de Pesquisa em Ciências Naturais com o projeto sobre Modelagem Molecular. Desenvolvedor Web Front-End. Projeto de Reconhecimento Facial. Membro da Python Software Foundation. Membro da Associação Python Brasil. Membro da Python Users Group - Paraíba.</p>
+        <p class="lead mb-5" align="justify">Atualmente sou estudante do Curso Técnico em Informática Integrado ao Ensino Médio do Instituto Federal da Paraíba Campus Guarabira. Sou instrutor dos Cursos Lógica de Programação e de Programação pelo Projeto Olimpíco de Informática da Universidade Federal de Campina Grande. Organizador da Olimpíada Regional de Informática. Pesquisador do Grupo de Pesquisa em Ciências Naturais com o projeto sobre Modelagem Molecular. Desenvolvedor Web Front-End. Projeto de Reconhecimento Facial. Membro da Python Software Foundation. Membro da Associação Python Brasil. Membro da Python Users Group - Paraíba.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/emanuel-gomes-ferreira/">
             <i class="fab fa-linkedin-in"></i>
