--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experiencias</h2>
-
+        <h3>Profissional</h3>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Estagiário</h3>
+            <h4 class="mb-0">Estagiário</h4>
             <div class="subheading mb-3">Prefeitura Municipal de Guarabira</div>
             <p>Organização do Banco de Dados, CRUD do Banco de Dados de materiais e equipamentos.</p>
           </div>
@@ -106,7 +106,40 @@
             <span class="text-primary">Junho 2018 - Atualmente</span>
           </div>
         </div>
-
+        <h3>Acadêmica</h3>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h4 class="mb-0">Monitor de Algoritmos e Estrutura de Dados</h4>
+            <div class="subheading mb-3">Instituto Federal da Paraíba - Campus Guarabira</div>
+            <p align="justify">Modularização, Registros (Estruturas), Recursividade, Conceitos e Técnicas de Manipulação de
+              Pilhas, Filas, Listas Encadeadas e Árvores. Algoritmos de Ordenação (exemplo: BubbleSort,
+              Mergesort, Quicksort) e algoritmos de Busca (exemplo: Busca Sequencial, Busca Sequencial
+              Ordenada, Busca Binária, Busca em árvores). Hashing.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Setembro 2018 - Fevereiro 2019</span>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h4 class="mb-0">Instrutor de Programação</h4>
+            <div class="subheading mb-3">Universidade Federal de Campina Grande</div>
+            <p align="justify">Preparar cursos de capacitação para alunos em lógica e/ou programação; organizar cursos de capacitação para alunos em lógica e/ou programação; ajudar na organização de competições de programação como a Olimpíada Paraibana de Informática e Olimpíada Brasileira de Informática; divulgar em escolas e universidades para atrair novos participantes para participar do projeto; reuniões semanais de acompanhamento; preenchimento de relatórios de acompanhamento de cada um dos cursos.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Agosto 2017 - Atualmente</span>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h4 class="mb-0">Equipe de Robótica</h4>
+            <div class="subheading mb-3">Instituto Federal da Paraíba - Campus Guarabira</div>
+            <p align="justify">Desenvolvimento de robô educacional com Lego EV3 para competições de Robótica</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Outubro 2018 - Atualmente</span>
+          </div>
+        </div>
 
       </div>
 
@@ -178,7 +211,7 @@
             <i class="fab fa-python"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-apple"></i>
+            <i class="fab fa-"></i>
           </li>
         </ul>
 
@@ -212,11 +245,31 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
-        <h2 class="mb-5">Prêmios &amp; Certificados</h2>
+        <h2 class="mb-5">Prêmios , Certificados &amp; Eventos</h2>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             Medalha de Bronze - Olimpíada Paraibana de Informática 2017</li>
+        </ul>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Palestrante - Python Brasil[14] Natal/RN - 2018</li>
+        </ul>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Ministrante de Oficina sobre Scratch Day - ONU - Colégio da Luz Guarabira/PB - 2019</li>
+        </ul>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Python Brasil[14] Natal/RN - 2018</li>
+        </ul>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Python Nordeste 2018 Campina Grande/PB - 2018</li>
         </ul>
       </div>
     </section>
