--- a/adm/bank/index.html
+++ b/adm/bank/index.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Página Inicial</a>
+              <a class="nav-link" href="../">Página Inicial</a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="bank/">Dados Bancários</a>
@@ -36,9 +36,9 @@
                 Situação Mensal
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="financeiro/novembro2019">Novembro - 2019</a>
-                <a class="dropdown-item" href="financeiro/dezembro2019">Dezembro - 2019</a>
-                <a class="dropdown-item" href="financeiro/janeiro2020">Janeiro - 2020</a>
+                <a class="dropdown-item" href="../financeiro/novembro2019">Novembro - 2019</a>
+                <a class="dropdown-item" href="../financeiro/dezembro2019">Dezembro - 2019</a>
+                <a class="dropdown-item" href="../financeiro/janeiro2020">Janeiro - 2020</a>
               </div>
             </li>
           </ul>
@@ -103,7 +103,7 @@
           <div class="col-sm">
             <table class="table table-sm table">
               <tr class="table-active" align="center">
-                <td colspan="4"><strong>NuBank Conta</strong></td>
+                <td colspan="4"><strong>Nu Pagamentos S.A - Banco 260</strong></td>
               </tr>
               <tr class="table-danger" align="center">
                 <td colspan="2"><strong>Nome Completo</strong></td>
@@ -115,11 +115,11 @@
               </tr>
               <tr class="table-danger" align="center">
                 <td colspan="2"><strong>Agência</strong></td>
-                <td colspan="2">0042</td>
+                <td colspan="2">0001</td>
               </tr>
               <tr class="table-danger" align="center">
-                <td colspan="2"><strong>Conta Poupança</strong></td>
-                <td colspan="2">47.975-7</td>
+                <td colspan="2"><strong>Conta de Pagamento</strong></td>
+                <td colspan="2">48.061.246-1</td>
               </tr>
             </table>
           </div>
