atualizações no Template

--- a/adm/bank/index.html
+++ b/adm/bank/index.html
@@ -31,15 +31,8 @@
             <li class="nav-item active">
               <a class="nav-link" href="bank/">Dados Bancários</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Situação Mensal
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="../financeiro/novembro2019">Novembro - 2019</a>
-                <a class="dropdown-item" href="../financeiro/dezembro2019">Dezembro - 2019</a>
-                <a class="dropdown-item" href="../financeiro/janeiro2020">Janeiro - 2020</a>
-              </div>
+            <li class="nav-item">
+              <a class="nav-link" href="financeiro/">Situação Mensal</a>
             </li>
           </ul>
         </div>
