--- a/adm/financeiro/dezembro2019/index.html
+++ b/adm/financeiro/dezembro2019/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Emanuel's | | ADMIN | | Conta de Novembro de 2019</title>
+    <title>Emanuel's | | ADMIN | | Conta de Dezembro de 2019</title>
     <link rel="shortcut icon" href="../../../img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="../../../img/favicon.ico" type="image/x-icon">
 
@@ -40,7 +40,7 @@
     </header>
     <main>
       <div class="container">
-        <h2 align="center">Financeiro do Mês de Novembro de 2019</h2>
+        <h2 align="center">Financeiro do Mês de Dezembro de 2019</h2>
         <div class="row">
 
           <div class="col-md-12">
@@ -55,27 +55,27 @@
               </tr>
               <tr align="center">
                 <td>Estágio</td>
-                <td>10~14 de Novembro/2019</td>
+                <td>09~14 de Dezembro/2019</td>
                 <td><strong>R$ 390,00</strong></td>
               </tr>
               <tr align="center">
                 <td>Mesada Sábado</td>
-                <td>09/Novembro/2019</td>
+                <td>07/Dezembro/2019</td>
                 <td><strong>R$ 20,00</strong></td>
               </tr>
               <tr align="center">
                 <td>Mesada Sábado</td>
-                <td>16/Novembro/2019</td>
+                <td>14/Dezembro/2019</td>
                 <td><strong>R$ 20,00</strong></td>
               </tr>
               <tr align="center">
                 <td>Mesada Sábado</td>
-                <td>23/Novembro/2019</td>
+                <td>21/Dezembro/2019</td>
                 <td><strong>R$ 20,00</strong></td>
               </tr>
               <tr align="center">
                 <td>Mesada Sábado</td>
-                <td>30/Novembro/2019</td>
+                <td>28/Dezembro   /2019</td>
                 <td><strong>R$ 20,00</strong></td>
               </tr>
               <tr align="center" class="table-success">
@@ -94,7 +94,7 @@
           <div class="col-md-6">
             <table class="table-striped table-sm table">
               <tr class="table-danger" align="center">
-                <td colspan="4"><strong>DESPESAS CARTÃO MÃE NUBANK</strong></td>
+                <td colspan="4"><strong>DESPESAS CARTÃO MÃE</strong></td>
               </tr>
               <tr align="center">
                 <td><strong>Descrição</strong></td>
@@ -102,13 +102,18 @@
                 <td><strong>Valor</strong></td>
               </tr>
               <tr align="center">
-                <td>Fatura</td>
-                <td>NADA</td>
-                <td>R$ 00,00</td>
+                <td>RecargaPay Tim(Nubank)</td>
+                <td>Última</td>
+                <td>R$ 18,58</td>
+              </tr>
+              <tr align="center">
+                <td>Anuidade(Visa)</td>
+                <td>penultima</td>
+                <td>R$ 8,00</td>
               </tr>
               <tr align="center" class="table-danger">
                 <td colspan="2"><strong>TOTAL</strong></td>
-                <td><strong>R$ 00,00</strong></td>
+                <td><strong>R$ 26,58</strong></td>
               </tr>
             </table>
           </div>
@@ -127,72 +132,47 @@
               </tr>
               <tr align="center">
                 <td>Farmácia Permanente</td>
-                <td>01/02</td>
+                <td>02/02</td>
                 <td>R$ 13,50</td>
               </tr>
               <tr align="center">
                 <td>Redepharma</td>
-                <td>01/02</td>
+                <td>02/02</td>
                 <td>R$ 24,51</td>
               </tr>
               <tr align="center">
                 <td>Netflix</td>
                 <td>Mensalmente</td>
-                <td>R$ 32,90</td>
+                <td>R$ 16,40</td>
               </tr>
               <tr align="center">
                 <td>RecargaPay Tim</td>
-                <td>01/02</td>
+                <td>02/02</td>
                 <td>R$ 26,19</td>
               </tr>
               <tr align="center">
                 <td>RecargaPay Nu</td>
-                <td>01/03</td>
+                <td>02/03</td>
                 <td>R$ 23,99</td>
               </tr>
-              <tr align="center">
+              <!--<tr align="center">
                 <td>Barbearia Seu Pimenta</td>
                 <td>Única</td>
                 <td>R$ 36,00</td>
-              </tr>
-              <tr align="center">
-                <td>IOF de ServiceProgramming</td>
-                <td>IOF</td>
-                <td>R$ 0,27</td>
-              </tr>
-              <tr align="center">
-                <td>ServiceProgrammingHost</td>
-                <td>Única</td>
-                <td>R$ 4,20</td>
-              </tr>
-              <tr align="center">
-                <td>iFood</td>
-                <td>Única</td>
-                <td>R$ 3,00</td>
-              </tr>
+              </tr>-->
               <tr align="center">
                 <td>Dilma de Oliveira</td>
-                <td>01/02</td>
+                <td>02/02</td>
                 <td>R$ 27,78</td>
               </tr>
               <tr align="center">
-                <td>iFood</td>
-                <td>Única</td>
-                <td>R$ 3,00</td>
-              </tr>
-              <tr align="center">
                 <td>RecargaPay Nu</td>
-                <td>01/03</td>
+                <td>02/03</td>
                 <td>R$ 25,67</td>
-              </tr>
-              <tr align="center" class="table-success">
-                <td>Pagamento </td>
-                <td>Antecipado</td>
-                <td>-R$ 19,14</td>
               </tr>
               <tr align="center" class="table-danger">
                 <td colspan="2"><strong>TOTAL</strong></td>
-                <td><strong>R$ 201,87</strong></td>
+                <td><strong>R$ 158,04</strong></td>
               </tr>
             </table>
           </div>
@@ -217,18 +197,18 @@
               </tr>
               <tr align="center">
                 <td>Cartão de Mãe NuBank</td>
-                <td>R$ 00,00</td>
-                <td>11/11</td>
+                <td>R$ 18,58</td>
+                <td>11/12</td>
               </tr>
               <tr align="center">
                 <td>Realce</td>
                 <td>R$ 36,10 </td>
-                <td>27/11</td>
+                <td>27/12</td>
               </tr>
               <tr align="center">
                 <td>Meu Cartão NuBank</td>
-                <td>R$ 201,87 </td>
-                <td>19/11</td>
+                <td>R$ 158,04 </td>
+                <td>19/12</td>
               </tr>
               <!--<tr align="center">
                 <td>Academia</td>
@@ -237,11 +217,11 @@
               </tr>-->
               <tr align="center" class="table-danger">
                 <td colspan="2"><strong>TOTAL GASTOS</strong></td>
-                <td><strong>R$ 245,97 </strong></td>
+                <td><strong>R$ 230,72 </strong></td>
               </tr>
               <tr align="center" class="table-success">
                 <td colspan="2"><strong>TOTAL PARA O RESTO DO MÊS</strong></td>
-                <td><strong>R$ 224,00 </strong></td>
+                <td><strong>R$ 239,28 </strong></td>
               </tr>
             </table>
           </div>
