--- a/adm/financeiro/index.html
+++ b/adm/financeiro/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Emanuel's | | ADMIN</title>
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../img/favicon.ico" type="image/x-icon">
 
     <!-- CSS BOOTSTRAP -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -25,21 +25,31 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">Página Inicial</a>
+            <li class="nav-item">
+              <a class="nav-link" href="../">Página Inicial</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="bank/">Dados Bancários</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="financeiro/">Situação Mensal</a>
             </li>
           </ul>
         </div>
-      </nav>
+      </nav> <br>
     </header>
     <main>
-
+      <div class="container">
+        <a href="novembro2019/"><button type="button" class="btn btn-dark btn-lg btn-block">FINANCEIRO - NOVEMBRO - 2019</button></a> <br>
+        <a href="dezembro2019/"><button type="button" class="btn btn-dark btn-lg btn-block">FINANCEIRO - DEZEMBRO - 2019</button></a> <br>
+        <a href="#"><button type="button" class="btn btn-dark btn-lg btn-block">FINANCEIRO - JANEIRO - 2020</button></a> <br>
+        <a href="#"><button type="button" class="btn btn-dark btn-lg btn-block">FINANCEIRO - FEVEREIRO - 2020</button></a> <br>
+        <a href="#"><button type="button" class="btn btn-dark btn-lg btn-block">FINANCEIRO - MARÇO - 2020</button></a> <br>
+        <a href="#"><button type="button" class="btn btn-dark btn-lg btn-block">FINANCEIRO - ABRIL - 2020</button></a> <br>
+      </div>
     </main>
+    <footer>
+
+    </footer>
   </body>
 </html>
