--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Hello World!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Emanuel Gomes, Guarabira, Desenvolvedor, Programador, Paraíba, Sites, Developer, Python Brasil, IFPB, Software" />
-    <meta name=”description” content="Site Pessoal de Emanuel Gomes, Desenvolvedor/Programador de sites responsivos. Desenvolve sites pessoais, Sites de Candidatura para Políticos.">
+    <meta name=”description” content="Site Pessoal de Emanuel Gomes, Desenvolvedor/Programador de sites responsivos em Guarabira e Região. Desenvolve sites pessoais, Sites de Candidatura para Políticos.">
     <!-- bootstrap 4.0.0-beta.2 -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
         integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
