--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 			<div class="thumbnails recentworks row">
 
-				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
 					<a class="thumbnail" href="sidebar-right.html">
 						<span class="img">
 							<img src="assets/images/s1.jpg" alt="">
@@ -116,7 +116,7 @@
 					<p></p>
 				</div>
 
-				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
 					<a class="thumbnail" href="http://laced.com.br/">
 						<span class="img">
 							<img src="assets/images/lacedsite.png" alt="">
@@ -129,7 +129,7 @@
 					<p></p>
 				</div>
 
-				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
 					<a class="thumbnail" href="http://laced.com.br/ori/">
 						<span class="img">
 							<img src="assets/images/orisite.png" alt="">
@@ -138,6 +138,19 @@
 						<span class="title">ORI</span>
 					</a>
 					<span class="details"><a href="">Web design</a> | <a href="">Operational Director</a></span>
+					<h4></h4>
+					<p></p>
+				</div>
+
+				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+					<a class="thumbnail" href="#">
+						<span class="img">
+							<img src="assets/images/ecoleta.png" alt="">
+							<span class="cover"><span class="more">See details &rarr;</span></span>
+						</span>
+						<span class="title">ECOLETA</span>
+					</a>
+					<span class="details"><a href="">Full Stack</a></span>
 					<h4></h4>
 					<p></p>
 				</div>
@@ -236,7 +249,7 @@
 			</div>
 
 			<div class="col-md-3 widget">
-				<h3 class="widget-title">Text widget</h3>
+				<h3 class="widget-title">Resume</h3>
 				<div class="widget-body">
 					<p>Web Developer in Training</p>
 				</div>
