--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
 			<div class="thumbnails recentworks row">
 
 				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-					<a class="thumbnail" href="sidebar-right.html">
+					<a class="thumbnail" href="http://lanocentro.com.br">
 						<span class="img">
-							<img src="assets/images/s1.jpg" alt="">
+							<img src="assets/images/lanocentro.com.br" alt="">
 							<span class="cover"><span class="more">See details &rarr;</span></span>
 						</span>
 						<span class="title">LáNoCentro</span>
