FOrm de Contato

--- a/index.html
+++ b/index.html
@@ -197,26 +197,35 @@
 
 		</div> --><!-- /section -->
 
-		<!--<div class="row section topspace">
-			<div class="panel panel-cta"><div class="panel-body">
-				<div class="col-lg-8">
-					<p>A simple, nice-looking <b>call to action box</b>. Boxing is about respect. getting it for yourself,
-					and taking it away from the other guy. no, this is mount everest. </p>
-				</div>
-				<div class="col-lg-4 text-right">
-					<a href="http://www.gettemplate.com/downloads/initio.zip " class="btn btn-primary btn-lg">Download template</a>
-				</div>
-			</div></div>
-		</div> --><!-- /section -->
+		<div class="row section featured topspace">
+			<h2 class="section-title"><span>Contact</span></h2>
+			<div class="row">
+				<div class="form">
 
-		<!--div class="row section clients topspace">
-			<h2 class="section-title"><span>Clients</span></h2>
-			<div class="col-lg-12">
-				<p>
-					<img src="assets/images/sample_clients.png" alt="">
-				</p>
+				    <form action="https://formspree.io/f/xbjpyana" method="POST" role="form" class="contactForm" id="contactForm">
+				        <div class="form-group">
+				            <input type="text" name="Nome" class="form-control input-text" id="name" placeholder="Seu nome" data-rule="minlen:4" data-msg="Introduza pelo menos 4 caracteres" />
+				            <div class="validation"></div>
+				        </div>
+				        <div class="form-group">
+				            <input type="email" class="form-control input-text" name="email" id="email" placeholder="Seu email" data-rule="email" data-msg="Por favor digite um email válido" />
+				            <div class="validation"></div>
+				        </div>
+				        <div class="form-group">
+				            <input type="text" class="form-control input-text" name="Assunto" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Introduza pelo menos 8 caracteres do assunto" />
+				            <div class="validation"></div>
+				        </div>
+				        <div class="form-group">
+				            <textarea class="form-control input-text text-area" name="Mensagem" rows="5" data-rule="required" data-msg="Por favor, escreva algo para nós" placeholder="Mensagem"></textarea>
+				            <div class="validation"></div>
+				        </div>
+
+				        <div class="text-center"><button type="submit" class="btn btn-primary mb-2">Enviar Mensagem</button></div> <br>
+				    </form>
+				</div>				
 			</div>
-		</div--> <!-- /section -->
+		</div>
+
 
 	</div>	<!-- /container -->
 
