--- a/index.html
+++ b/index.html
@@ -1,310 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="FrontEnd Developer">
-	<meta name="author"      content="Emanuel Gomes">
-
-	<title>Emanuel Gomes</title>
-
-	<link rel="shortcut icon" href="assets/images/favicon.gif">
-
-	<!-- Bootstrap -->
-	<link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet">
-	<!-- Icons -->
-	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-	<!-- Fonts -->
-	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700">
-	<!-- Custom styles -->
-	<link rel="stylesheet" href="assets/css/styles.css">
-
-	<!--[if lt IE 9]> <script src="assets/js/html5shiv.js"></script> <![endif]-->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Emanuel Gomes</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body class="home">
+<body>
 
-<header id="header">
-	<div id="head" class="parallax" parallax-speed="2">
-		<h1 id="logo" class="text-center">
-			<img class="img-circle" src="assets/images/guy.jpg" alt="">
-			<span class="title">Emanuel Gomes</span>
-			<span class="tagline">FrontEnd Developer<br>
-				emanuel.gfsdeveloper@gmail.com</span>
-		</h1>
-	</div>
+  <header> <!--Início do Cabeçalho do Site-->
+    <!--<div class="links">
+      <a href="/">Sobre</a>
+      <a href="/">Aulas</a>
+    </div>-->
+    
+  </header> <!--Fim do Cabeçalho do Site-->
+  
+  <div id="wrapper">
+    <img src="emanuel.jpg" alt="Emanuel Gomes" width="15%">
+    <h1>Emanuel Gomes</h1>
+    <h2>Desenvolvedor FrontEnd</h2>
+    <p>Universitário do Curso Técnologico em Sistemas para Internet - IFPB Campus Guarabira</p>
+  </div>
 
-	<!--nav class="navbar navbar-default navbar-sticky">
-		<div class="container-fluid">
+  <div id="links-footer" class="links">
+    <a href="https://github.com/emanuel-gomes" target="_blank">Github</a>
+    <a href="https://instagram.com/emanuelgomes.dev" target="_blank">Instagram</a>
+    <a href="https://linkedin.com/in/emanuel-gomes-ferreira" target="_blank">Linkedin</a>
+  </div>
 
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-			</div>
-
-			<div class="navbar-collapse collapse">
-
-				<ul class="nav navbar-nav">
-					<li class="active"><a href="index.html">Home</a></li>
-					<li><a href="about.html">Sobre mim</a></li>
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">More Pages <b class="caret"></b></a>
-						<ul class="dropdown-menu">
-							<li><a href="sidebar-left.html">Left Sidebar</a></li>
-							<li><a href="sidebar-right.html">Right Sidebar</a></li>
-							<li><a href="single.html">Blog Post</a></li>
-						</ul>
-					</li>
-					<li><a href="blog.html">Blog</a></li>
-				</ul>
-
-			</div> --> <!--/.nav-collapse -->
-		</div>
-	</nav>
-</header>
-
-<main id="main">
-
-	<div class="container">
-
-		<div class="row section topspace">
-			<div class="col-md-12">
-				<p class="lead text-center text-muted">Coder in constant training. </p>
-			</div>
-		</div> <!-- / section -->
-
-		<div class="row section featured topspace">
-			<h2 class="section-title"><span>Services</span></h2>
-			<div class="row">
-				<div class="col-sm-6 col-md-3">
-					<h3 class="text-center">Web <br>design</h3>
-					<p></p>
-					<!--<p class="text-center"><a href="" class="btn btn-action">Read more</a></p>-->
-				</div>
-				<div class="col-sm-6 col-md-3">
-					<h3 class="text-center">FrontEnd Developer</h3>
-					<p></p>
-					<!--<p class="text-center"><a href="" class="btn btn-action">Read more</a></p>-->
-				</div>
-				<div class="col-sm-6 col-md-3">
-					<h3 class="text-center">Technical Consultancy</h3>
-					<p></p>
-					<!--<p class="text-center"><a href="" class="btn btn-action">Read more</a></p>-->
-				</div>
-				<div class="col-sm-6 col-md-3">
-					<h3 class="text-center">Social <br>Education</h3>
-					<p></p>
-					<!--<p class="text-center"><a href="" class="btn btn-action">Read more</a></p>-->
-				</div>
-			</div>
-		</div> <!-- / section -->
-
-		<div class="row section recentworks topspace">
-
-			<h2 class="section-title"><span>Recent Works</span></h2>
-
-			<div class="thumbnails recentworks row">
-
-				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-					<a class="thumbnail" href="http://lanocentro.com.br">
-						<span class="img">
-							<img src="assets/images/lanocentro.com.br" alt="">
-							<span class="cover"><span class="more">See details &rarr;</span></span>
-						</span>
-						<span class="title">LáNoCentro</span>
-					</a>
-					<span class="details"><a href="">FrontEnd</a></span>
-					<h4></h4>
-					<p></p>
-				</div>
-
-				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-					<a class="thumbnail" href="http://laced.com.br/">
-						<span class="img">
-							<img src="assets/images/lacedsite.png" alt="">
-							<span class="cover"><span class="more">See details &rarr;</span></span>
-						</span>
-						<span class="title">Laced</span>
-					</a>
-					<span class="details"><a href="">Web design</a></span>
-					<h4></h4>
-					<p></p>
-				</div>
-
-				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-					<a class="thumbnail" href="http://laced.com.br/ori/">
-						<span class="img">
-							<img src="assets/images/orisite.png" alt="">
-							<span class="cover"><span class="more">See details &rarr;</span></span>
-						</span>
-						<span class="title">ORI</span>
-					</a>
-					<span class="details"><a href="">Web design</a> | <a href="">Operational Director</a></span>
-					<h4></h4>
-					<p></p>
-				</div>
-
-				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-					<a class="thumbnail" href="#">
-						<span class="img">
-							<img src="assets/images/ecoleta.png" alt="">
-							<span class="cover"><span class="more">See details &rarr;</span></span>
-						</span>
-						<span class="title">ECOLETA</span>
-					</a>
-					<span class="details"><a href="">Full Stack</a></span>
-					<h4></h4>
-					<p></p>
-				</div>
-				<!--
-				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-					<a class="thumbnail" href="sidebar-right.html">
-						<span class="img">
-							<img src="assets/images/s1.jpg" alt="">
-							<span class="cover"><span class="more">See details &rarr;</span></span>
-						</span>
-						<span class="title">Pure ipsum - development services for people</span>
-					</a>
-					<span class="details"><a href="">Web design</a> | <a href="">Wordpress</a></span>
-					<h4></h4>
-					<p></p>
-				</div>
-
-				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-					<a class="thumbnail" href="sidebar-right.html">
-						<span class="img">
-							<img src="assets/images/s1.jpg" alt="">
-							<span class="cover"><span class="more">See details &rarr;</span></span>
-						</span>
-						<span class="title">Lorem studios - interior and patio design</span>
-					</a>
-					<span class="details"><a href="">Web design</a> | <a href="">Logotype</a></span>
-					<h4></h4>
-					<p></p>
-				</div>
-
-				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-					<a class="thumbnail" href="sidebar-right.html">
-						<span class="img">
-							<img src="assets/images/s1.jpg" alt="">
-							<span class="cover"><span class="more">See details &rarr;</span></span>
-						</span>
-						<span class="title">Lorem studios - interior and patio design</span>
-					</a>
-					<span class="details"><a href="">Web design</a> | <a href="">Logotype</a></span>
-					<h4></h4>
-					<p></p>
-				</div>
-			</div>
-
-		</div> --><!-- /section -->
-
-		<div class="row section featured topspace">
-			<h2 class="section-title"><span>Contact</span></h2>
-			<div class="row">
-				<div class="form">
-
-				    <form action="https://formspree.io/f/xbjpyana" method="POST" role="form" class="contactForm" id="contactForm">
-				        <div class="form-group">
-				            <input type="text" name="Nome" class="form-control input-text" id="name" placeholder="Seu nome" data-rule="minlen:4" data-msg="Introduza pelo menos 4 caracteres" />
-				            <div class="validation"></div>
-				        </div>
-				        <div class="form-group">
-				            <input type="email" class="form-control input-text" name="email" id="email" placeholder="Seu email" data-rule="email" data-msg="Por favor digite um email válido" />
-				            <div class="validation"></div>
-				        </div>
-				        <div class="form-group">
-				            <input type="text" class="form-control input-text" name="Assunto" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Introduza pelo menos 8 caracteres do assunto" />
-				            <div class="validation"></div>
-				        </div>
-				        <div class="form-group">
-				            <textarea class="form-control input-text text-area" name="Mensagem" rows="5" data-rule="required" data-msg="Por favor, escreva algo para nós" placeholder="Mensagem"></textarea>
-				            <div class="validation"></div>
-				        </div>
-
-				        <div class="text-center"><button type="submit" class="btn btn-primary mb-2">Enviar Mensagem</button></div> <br>
-				    </form>
-				</div>				
-			</div>
-		</div>
-
-
-	</div>	<!-- /container -->
-
-</main>
-
-<footer id="footer">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-3 widget">
-				<h3 class="widget-title">Contact</h3>
-				<div class="widget-body">
-					<p>+55 (83) 9 9855-8560<br>
-						<a href="mailto:#">emanuel.gfsdeveloper@gmail.com</a><br>
-						<br>
-						Guarabira 58200-000, Paraíba, Brazil
-					</p>
-				</div>
-			</div>
-
-			<div class="col-md-3 widget">
-				<h3 class="widget-title">Follow me</h3>
-				<div class="widget-body">
-					<p class="follow-me-icons">
-						<!--<a href=""><i class="fa fa-twitter fa-2"></i></a>-->
-						<a href="https://www.instagram.com/emanuelgomes.dev/"><i class="fa fa-instagram fa-2"></i></a>
-						<a href="https://github.com/emanuel-gomes"><i class="fa fa-github fa-2"></i></a>
-						<a href="https://ca.linkedin.com/in/emanuel-gomes-ferreira"><i class="fa fa-linkedin fa-2"></i></a>
-					</p>
-				</div>
-			</div>
-
-			<div class="col-md-3 widget">
-				<h3 class="widget-title">Resume</h3>
-				<div class="widget-body">
-					<p>Web Developer in Training</p>
-				</div>
-			</div>
-
-			<div class="col-md-3 widget">
-				<h3 class="widget-title">Form widget</h3>
-				<div class="widget-body">
-					<p>+55 (83) 9 9855-8560<br>
-						<a href="mailto:#">emanuel.gfsdeveloper@gmail.com</a><br>
-						<br>
-						Guarabira 58200-000, Paraíba, Brazil
-					</p>
-				</div>
-			</div>
-
-		</div> <!-- /row of widgets -->
-	</div>
-</footer>
-
-<footer id="underfooter">
-	<div class="container">
-		<div class="row">
-
-			<div class="col-md-6 widget">
-				<div class="widget-body">
-					<p>Guarabira 58200-000, Paraíba, Brazil </p>
-				</div>
-			</div>
-
-			<div class="col-md-6 widget">
-				<div class="widget-body">
-					<p class="text-right">
-						Copyright &copy; <script>document.write(new Date().getFullYear());</script></a> </p>
-				</div>
-			</div>
-
-		</div> <!-- /row of widgets -->
-	</div>
-</footer>
-
-
-
-<!-- JavaScript libs are placed at the end of the document so the pages load faster -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-<script src="assets/js/template.js"></script>
 </body>
 </html>
