--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </header> <!--Fim do Cabeçalho do Site-->
   
   <div id="wrapper">
-    <img src="emanuel.jpg" alt="Emanuel Gomes" width="15%">
+    <img src="emanuel.jpg" alt="Emanuel Gomes" width="250px">
     <h1>Emanuel Gomes</h1>
     <h2>Desenvolvedor FrontEnd</h2>
     <p>Universitário do Curso Técnologico em Sistemas para Internet - IFPB Campus Guarabira</p>
